# webassembly-bundler

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh
rspack/: README.md  package.json  pnpm-lock.yaml  rspack.config.ts
rspack/src/: App.tsx
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
vite/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
vite/src/: main.ts
webpack4/: package.json  pnpm-lock.yaml  webpack.config.js
webpack4/src/: index.js
webpack5/: package.json  pnpm-lock.yaml  webpack.config.js
webpack5/public/: index.html
webpack5/src/: index.js
