[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"
description = "A unified WebAssembly module for demonstrating Rust + WASM integration with various bundlers"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
